--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="search_hint">Buscar por comida</string>
     <string name="number_results">Hay %1$d resultados:</string>
     <string name="no_results">No hay cervezas que encajen con esta comida :-(</string>
+    <string name="error_getting_beer">Error getting beer</string>
 </resources>
